Windows SDK 10.0.10586.0 not selected on 10.0.10240 machine
I'm using CMake 3.6.0. I'm running Windows 10 and Visual Studio 2015 Community Edition. I have the following Windows 10 SDK include directories:
- C:\Program Files (x86)\Windows Kits\10\Include\10.0.10150.0
- C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0
- C:\Program Files (x86)\Windows Kits\10\Include\10.0.10586.0
CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION is set to 10.0.10240.0 This is verified with a CMakeLists.txt containing only the following:
message("value ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")
It should be 10.0.10586.0
I haven't been able to build a debug version of CMake to try to trace the bug. Installing Qt actually made CMake non-functional; it claimed missing .dlls associated with Qt. I uninstalled Qt and CMake, then reinstalled CMake to fix that.
I notice that NoWindowsH() is testing with "windows.h", in lower case. Correct filename is Windows.h Don't know if that matters. C:\Program Files (x86)\Windows Kits\10\Include\10.0.10586.0\um\Windows.h does exist. If case sensitivity isn't the problem, then perhaps it's an iterator "off by 1" error?
CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION is used to build dependencies for the Ogre 3D engine. https://bitbucket.org/cabalistic/ogredeps We use it to find DirectX components. The ogredeps will build with 10.0.10240.0 as possibly the needed DirectX components haven't changed much, but using the latest SDK is desirable.